style: fixed xl btn width gap

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
 h1,
 h2,
 h3,
@@ -39,6 +41,6 @@ label {
     @apply max-h-[40px]  px-5 py-2 rounded-md  text-white font-bold bg-secondary-100 hover:bg-green-400;
   }
   .site-xl-btn {
-    @apply max-h-[40px]  px-5 py-2 rounded-md  text-white font-bold bg-secondary-100 hover:bg-green-400 w-8/12;
+    @apply max-h-[40px] max-w-xs  px-5 py-2 rounded-md  text-white font-bold bg-secondary-100 hover:bg-green-400 w-8/12;
   }
 }
